tests/highlevel/test-outputs/highlink-cpp.out
Status: OK

STEP 1

gen_header: Status: upstream => result_schema undefined
None
WARNING: 'arr' form schema does not contain 'contiguous'.      Explicit stride values will be provided.

STEP 2

translator: Status: error
*** translator ***
Traceback (most recent call last):
  File "/seamless/seamless/core/transformation.py", line 201, in _execute
    prelim_callback, progress_callback
  File "/seamless/seamless/core/transformation.py", line 350, in _execute_local
    mod = await build_module_async(value)
  File "/seamless/seamless/core/build_module.py", line 166, in build_module_async
    full_module_name, mod = build_module(module_definition)
  File "/seamless/seamless/core/build_module.py", line 149, in build_module
    full_module_name, completed_checksum, completed_module_definition
  File "/seamless/seamless/core/build_module.py", line 113, in build_compiled_module
    raise BuildModuleError(stderr)
seamless.core.build_module.BuildModuleError: 
g++ -c main.cpp -O3 -ffast-math -march=native -fPIC -p -g -o main.o
******************** ERROR ********************
main.cpp:1:1: error: ‘lambda’ does not name a type
 lambda arr, fac, offset: 42
 ^~~~~~

******************** /ERROR ********************

*** /translator ***


STEP 3

translator: Status: error
*** translator ***
Traceback (most recent call last):
  File "/seamless/seamless/core/transformation.py", line 201, in _execute
    prelim_callback, progress_callback
  File "/seamless/seamless/core/transformation.py", line 350, in _execute_local
    mod = await build_module_async(value)
  File "/seamless/seamless/core/build_module.py", line 166, in build_module_async
    full_module_name, mod = build_module(module_definition)
  File "/seamless/seamless/core/build_module.py", line 149, in build_module
    full_module_name, completed_checksum, completed_module_definition
  File "/seamless/seamless/core/build_module.py", line 113, in build_compiled_module
    raise BuildModuleError(stderr)
seamless.core.build_module.BuildModuleError: 
g++ -c main.cpp -O3 -ffast-math -march=native -fPIC -p -g -o main.o
******************** ERROR ********************
main.cpp:1:1: error: ‘lambda’ does not name a type
 lambda arr, fac, offset: 42
 ^~~~~~

******************** /ERROR ********************

*** /translator ***

<Silk: 
/*
The following C header has been auto-generated from the transformer schema
It will be used to generate bindings, but it will not be automatically
added to the compiled transformer code.

If your transformer code is written in C/C++, you may do so yourself.
For C, you may need to include "stdint.h" and "stdbool.h".
If your transform() function is written in C++, don't forget to add 'extern "C" '
*/

typedef struct ArrStruct {
  const double *data;
  unsigned int shape[1];
  unsigned int strides[1];
} ArrStruct;

int transform(const ArrStruct* arr, int fac, int offset); >
